# bid-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  api.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh
agent/: core.py  factory.py  supervisor.py  tools_bidding.py  tools_company.py  tools_legal.py  vector_store.py
data/: bidding_notices.csv  companies.csv  company_info.csv  company_info1.csv  laws.csv  ods_company_detail.csv  policy.csv  policy_metadata.csv  qcc_companies.csv  t_policy.csv  招投标交易.csv
data/vector_index/: laws_policy_meta.json  tfidf_vectorizer.pkl
scripts/: build_index.py  evaluate.py  generate_detailed_analysis.py  generate_report.py  init_db.py  report_content.json
tests/: _article_numbers.txt  _law_titles.txt  eval_data.json  eval_result_bidding_analyst.json  eval_result_company_profiler.json  eval_result_legal_advisor.json  eval_result_supervisor.json  test_agent.py  test_tools.py
